--- a/src/app/onion/onion.component.html
+++ b/src/app/onion/onion.component.html
@@ -7,6 +7,6 @@
     cebule: {{ this.gs.printOnions(this.gs.onions) }}
   </div>
   <div id="onionPerSecond" class="noselect">
-    <img id="plusPerSecond" src="src/assets/plus.svg"/> {{ this.gs.onionPerSecond }} / sec
+    <img id="plusPerSecond" src="assets/plus.svg"/> {{ this.gs.onionPerSecond }} / sec
   </div>
 </div>
