wygląd layoutu ulepszeń, poprawka +1, poprawka nagłówka list

--- a/src/app/structure/structure.component.css
+++ b/src/app/structure/structure.component.css
@@ -14,35 +14,16 @@
 	display: none;
 }
 
-.structureMain > #description
+.structureMain > .hiddenContent
 {
 	display: none;
 }
 
-.structureMain:hover > #description
+.structureMain:hover > .hiddenContent
 {
 	display: inline;
 }
 
-.structureMain > #price
-{
-	display: none;
-}
-
-.structureMain:hover > #price
-{
-	display: inline;
-}
-
-.structureMain > #production
-{
-	display: none;
-}
-
-.structureMain:hover > #production
-{
-	display: inline;
-}
 
 .structureContainer
 {
