--- a/src/app/upgrade/upgrade.component.css
+++ b/src/app/upgrade/upgrade.component.css
@@ -1,25 +1,131 @@
 .upgradeMain
 {
-	background-color: orange;
-	height: 80px;
-	width: 350px;
-  border: dotted blue;
-  margin-bottom: 10px;
-	color: black;
-}
-
-.upgradeMain:hover
-{
-	background-color: gray;
+	position: relative;
+	background-color: fdf5e0;
+	height: 95px;
+	width: 450px;
+	color: #9a6d38;
+	padding-top: 15px;
+	font-family: lovemonster;
 }
 
 #name
 {
-	font-weight: bold;
-	color: red;
+	position: absolute;
+	left: 85px;
+	top: 25px;
+	font-size: 45px;
 }
 
 #description
 {
-	color: yellow;
+	position: absolute;
+	left: 85px;
+	top: 25px;
+	font-size: 20px;
+	font-weight: bold;
+}
+
+#upg_icon
+{
+	position: absolute;
+	top: 30px;
+	left: 20px;
+	width: 55px;
+	height: 55px;
+}
+
+#price
+{
+	position: absolute;
+	left: 85px;
+	top: 70px;
+	font-size: 20px;	
+}
+
+#multiplier
+{
+	position: absolute;
+	left: 85px;
+	top: 45px;
+	font-size: 20px;
+	font-style: italic;
+}
+
+#bought
+{
+	position: absolute;
+	background-image: url("../../assets/onion_glow.svg");
+	background-size: contain;
+	left: 360px;
+	top: 5px;
+	width: 100px;
+	height: 100px;
+}
+
+.upgradeContainer
+{
+	position: relative;
+	margin-bottom: -13px;
+	margin-top: -15px;
+	top: -17px;
+	//height: 350px;
+	//overflow-y: scroll;
+	//overflow-x: hidden;
+}
+
+@font-face {
+  font-family: 'lovemonster';
+  src: url('../../assets/lovemonster.ttf') format('ttf'),
+  url('../../assets/lovemonster.ttf') format('truetype'); /* Safari, Android, iOS */
+}
+
+.leftColumn
+{
+	width: 15px;
+	height: 100%;
+	background-image: url("../../assets/nav_background_vertical.svg");
+	background-size: contain;
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	z-index: 9;
+}
+
+.rightColumn
+{
+	width: 15px;
+	height: 100%;
+	background-image: url("../../assets/nav_background_vertical.svg");
+	background-size: contain;
+	position: absolute;
+	top: 0px;
+	right: 0px;
+	z-index: 9;
+}
+
+.woodenRow
+{
+	position: absolute;
+	background-image: url("../../assets/nav_background.svg");
+	background-size: contain;
+	width: 100%;
+	height: 15px;
+	top: 0px;
+	z-index: 8;
+}
+
+.upgradeMain:hover > #name
+{
+	display: none;
+}
+
+.upgradeMain > .hiddenContent
+{
+	display: none;
+}
+
+.upgradeMain:hover > .hiddenContent
+{
+	display: inline;
 }
