--- a/src/app/upgrade/upgrade.component.html
+++ b/src/app/upgrade/upgrade.component.html
@@ -1,19 +1,13 @@
-<div class="upgradeMain" *ngFor="let upgrade of this.gs.upgrades; let i = index;" (click)="clicked(i)">
-  <table>
-    <tr>
-      <td>
-        <img src="{{ upgrade.icon }}"/>
-      </td>
-      <td>
-        <div id="name">{{ upgrade.name }}</div>
-        <div id="description">{{ upgrade.description}}</div>
-        <div>Cena: {{ upgrade.base_prize }} cebul</div>
-        <div>Mnożnik: {{upgrade.multiplier}}</div>
-        <div>Kupione: {{this.isBoughtById(upgrade.system_id)}}</div>
-      </td>
-      <td>
-
-      </td>
-    </tr>
-  </table>
+<div class="upgradeContainer">
+	<div class="upgradeMain" *ngFor="let upgrade of this.gs.upgrades; let i = index;" (click)="clicked(i)">
+		<div class="leftColumn"></div>
+		<div class="rightColumn"></div>
+		<img id="upg_icon" src="{{ upgrade.icon }}" />
+		<div id="name">{{ upgrade.name }}</div>
+		<div id="description" class="hiddenContent">{{ upgrade.description}}</div>
+		<div id="multiplier" class="hiddenContent">Mnożnik: {{upgrade.multiplier}}</div>
+		<div id="price" class="hiddenContent">Cena: {{ upgrade.base_prize }} cebul</div>
+		<div id="bought" [hidden]="!this.isBoughtById(upgrade.system_id)"></div>
+	  <div class="woodenRow"></div>
+	</div>
 </div>
