--- a/src/styles.css
+++ b/src/styles.css
@@ -114,7 +114,7 @@ body {
 
 .plusLabel {
   width: 50px;
-  height: 30px;
+  height: 35px;
   position: absolute;
   z-index: 1000;
   font-size: 30px;
@@ -143,10 +143,11 @@ body {
 
 .panel-title {
   font-family: "Semringah";
-  font-size: 25px;
-  font-weight: bolder;
+  font-size: 30px;
+  font-weight: bold;
   text-decoration: none;
   color: #f8f5e3;
+  margin-top: -5px;
   text-stroke: 0.5px #8c6637;
   -webkit-text-stroke: 0.5px #8c6637;
   text-shadow: 0 0 16px #deb170;
