--- a/src/styles.css
+++ b/src/styles.css
@@ -95,16 +95,18 @@ body {
 }
 
 #mainOnion {
-  width: 100%;
-  height: 100%;
   position: absolute;
   z-index: 5;
 }
 
 #onionContainer {
   padding: 20px;
-  width: 600px;
   height: 570px;
+}
+
+
+#uppContainer {
+  padding: 20px;
 }
 
 #loginContainer {
@@ -139,6 +141,7 @@ body {
   border: none;
   box-shadow: none;
   width: 350px;
+  margin-left: -100px;
 }
 
 .panel-title {
