--- a/src/styles.css
+++ b/src/styles.css
@@ -27,7 +27,16 @@ body {
   height: 170px;
   position: fixed;
   bottom: 0;
-  z-index: 110;
+  z-index: 1010;
+}
+
+#statisticsContainer
+{
+	position: absolute;
+	left: 50%;
+	top: 150px;
+	margin-left: -300px;
+	z-index: 1005;
 }
 
 .navbar-default .navbar-brand {
