obramowanie ona do statystyk

--- a/src/app/upgrade/upgrade.component.css
+++ b/src/app/upgrade/upgrade.component.css
@@ -1,7 +1,7 @@
 .upgradeMain
 {
 	position: relative;
-	background-color: fdf5e0;
+	background-color: #fdf5e0;
 	height: 95px;
 	width: 450px;
 	color: #9a6d38;
