--- a/src/app/statistics/statistics.component.html
+++ b/src/app/statistics/statistics.component.html
@@ -12,6 +12,10 @@
 	<div id="rightBottomCorner" class="corner"></div>
 	
 	<div id="statisticsContent">
+		<div id="numberOfCliksLabel" class="labelDiv textDiv">Kliknięcia w cebule:</div>
+		<div id="numberOfCliksValue" class="textDiv">1234567890</div>
+		<div id="numberOfTookOnionsLabel" class="textDiv">Łącznie zebrane cebule:</div>
+		<div id="numberOfTookOnionsValue" class="textDiv">1234567890</div>
 		
 	</div>
 </div>
