--- a/src/landing_page/css/style.css
+++ b/src/landing_page/css/style.css
@@ -1,283 +1,330 @@
 body {
-	background-color: #fff;
-	color: #777;
-	font: normal 15px "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
+  color: #91522c;
+  background: #c3f1fe; /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(#c3f1fe, #f1feff); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(#c3f1fe, #f1feff); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(#c3f1fe, #f1feff); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(#c3f1fe, #f1feff); /* Standard syntax */
+  overflow-x: hidden;
+  background-attachment: fixed;
+  //min-height: 770px;
+  vertical-align: middle;
 }
 
-p {
-	font-family: 'Crete Round', serif;
-	line-height: 20px;
-	margin-bottom: 20px;
-	color: #02b8dd;
+#grassContainer {
+  background: url("../assets/grass.svg") repeat-x left bottom;
+  width: 100%;
+  height: 170px;
+  position: fixed;
+  bottom: 0px;
+  left: 0px;
+  z-index: 1010;
 }
 
-h1 {
-	font-family: 'Crete Round', serif;
-	font-weight: bold;
-	color: #444;
-	font-size: 70px;
-	margin-bottom: 20px;
+#alertContainer
+{
+	left: 50%;
+	top: 80px;
+	margin-left: -400px;
+	position: absolute;
+	background-color: #fdf5e0;
+	width: 800px;
+	height: 115px;
+	z-index: 1000;
 }
 
-h2 {
-	font-family: 'Crete Round', serif;
-	font-weight: 300;
-	color: #ff0080;
-	font-size: 55px;
-	text-transform: uppercase;
-	text-align: center;
-	margin-bottom: 20px;
+#closeButton
+{
+	height: 25px;
+	width: 40px;
+	position: absolute;
+	bottom: 28px;
+	right: 90px;
+	background-image: url('../assets/ok.svg');
+	background-size: 100% 100%;
+	z-index: 9999999;
 }
 
-h3 {
-	font-family: 'Crete Round', serif;
+#closeButton:hover
+{
+	background-image: url('../assets/ok_hover.svg');
+}
+
+@font-face 
+{
+  font-family: 'lovemonster';
+  src: url('../assets/lovemonster.ttf') format('ttf'),
+  url('../assets/lovemonster.ttf') format('truetype'); /* Safari, Android, iOS */
+}
+
+#alertContent
+{
+	padding: 30px;
+	font-family: lovemonster;
 	font-size: 30px;
-	color: #ff0080;
-	font-weight: bold;
-	text-transform: uppercase;
-	text-align: center;
-	margin-bottom: 20px;
 }
 
-h4 {
-	font-family: 'Crete Round', serif;
-	font-size: 24px;
-	color: #ff0080;
-	font-weight: bold;
-	text-transform: uppercase;
-	margin-bottom: 20px;
+#topFrame
+{
+	top: 0px;
 }
 
-h5 {
-	font-size: 15px;
-	color: #444;
-	font-weight: bold;
-	text-transform: uppercase;
+#bottomFrame
+{
+	bottom: 0px;
 }
 
-a {
-	text-decoration: none;
-	color: #444;
+#leftFrame
+{
+	left: 0px;
 }
 
-a:hover {
-	color: #02b8dd;
+#rightFrame
+{
+	right: 0px;
 }
 
-strong {
-	font-weight: bold;
+#leftTopCorner
+{
+	left: 0px;
+	top: 0px;
+	margin-left: -6px;
+	margin-top: -4px;
+	width: 22px;
+	height: 22px;
 }
 
-small {
-	font-size: 13px;
-	color: #777;
-	font-style: italic;
+#rightTopCorner
+{
+	right: 0px;
+	top: 0px;
+	margin-right: -6px;
+	margin-top: -4px;
+	width: 22px;
+	height: 22px;
 }
 
-.clear {
-	clear: both;
+#leftBottomCorner
+{
+	left: 0px;
+	bottom: 0px;
+	margin-left: -6px;
+	margin-bottom: -4px;
+	width: 22px;
+	height: 22px;
 }
 
-.wrapper {
-	margin: 0 auto;
-	padding: 0 10px;
-	width: 940px;
+#rightBottomCorner
+{
+	right: 0px;
+	bottom: 0px;
+	margin-right: -6px;
+	margin-bottom: -4px;
+	width: 22px;
+	height: 22px;
 }
 
-header {
-	height: 120px;
+.horizontalFrame
+{
+	position: absolute;
+	width: 800px;
+	height: 15px;
+	background-image: url("../../assets/nav_background.svg");
+	background-size: contain;
+	z-index: 10;
+	margin-top: -2px;
+	margin-bottom: -2px;
 }
 
-header h1 {
-	float: left;
-	margin-top: 32px;
+.verticalFrame
+{
+	position: absolute;
+	width: 15px;
+	height: 115px;
+	background-image: url("../../assets/nav_background_vertical.svg");
+	background-size: contain;
+	margin-left: -2px;
+	margin-right: -2px;
+	z-index: 5;
 }
 
-header h1 .color {
-	color: #02b8dd;
+.corner
+{
+	width: 25px;
+	height: 25px;
+	position: absolute;
+	background-image: url("../../assets/trunk.svg");
+	background-size: contain;
+	z-index: 15;	
 }
 
-header nav {
-	float: right;
+#mainOnionContainer
+{
+	width: 600px;
+	height: 600px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin-left: -300px;
+	margin-top: -385px;
 }
 
-header nav ul li {
-	float: left;
-	display: inline-block;
-	margin-top: 50px;
+#gameName
+{
+	position: absolute;
+	left: 175px;
+	bottom: 20px;
+	height: 140px;
+	width: 250px;
+	background-image: url('../assets/logo.svg');
+	background-size: 100% 100%;
+	z-index: 20;
 }
 
-header nav ul li a {
-	color: #444;
-	text-transform: uppercase;
-	font-weight: bold;
-	display: block;
-	margin-right: 20px;
+#loginButtonContainer
+{
+	position: absolute;
+	bottom: -5px;
+	left: 225px;
+	z-index: 100;
 }
 
-#hero-image {
-	height: 580px;
-	padding-top: 1px;
-	background: #e8eced url('../images/wrr_onion.png') no-repeat center;
-}
-
-#hero-image h2 {
-	margin: 180px 0 40px 0;
-}
-
-.button-1 {
-	font-family: 'Crete Round', serif;
-	display: block;
-	text-align: center;
-	background: #ff0080;
-	border-radius: 3px;
-	color: #fff;
-	width: 180px;
-	height: 50px;
-	font-size: 20px;
-	line-height: 50px;
-	margin: 0 auto;
-}
-
-.button-1:hover {
-	background-color: #02b8dd;
-	color: #fff;
-}
-
-#features ul {
-	margin: 80px 0;
-}
-
-#features ul li {
-	width: 300px;
-	padding-top: 140px;
-	float: left;
-	margin-right: 10px;
-	text-align: center;
-}
-
-#features ul li.feature-1 {
-	background: url('../images/kalesony.jpg') no-repeat top center;
-}
-#features ul li.feature-2 {
-	background: url('../images/gumiaki_2.jpg') no-repeat top center;
-}
-#features ul li.feature-3 {
-	background: url('../images/gacie_2.jpg') no-repeat top center;
-}
-
-#primary-content {
-	background-color: #e0e0eb;
-	padding: 60px 0;
-	text-align: center;
-}
-
-#primary-content h3 {
-	display: block;
-	margin: 0 auto 20px auto;
-	width: 400px;
-	border-bottom: 1px solid #02b8dd;
-	padding: 0 0 20px 0;
-}
-
-#primary-content a img {
-	margin: 20px 0;
-}
-
-#secondary-content {
-	padding: 60px 0;
-	text-align: center;
-}
-
-#secondary-content article {
-	width: 460px;
-	height: 270px;
-	float: left;
-	background-color: #f5f5f5;
-}
-
-#secondary-content article:first-child {
-	margin-right: 20px;
-}
-
-#secondary-content article .overlay {
-	background: rgba(255, 255, 255, .95);
-	height: 230px;
-	width: 190px;
-	padding: 20px;
-}
-
-article h4 {
-	border-bottom: 1px solid #02b8dd;
-	padding-bottom: 20px;
-}
-
-.more-link {
-	border: 1px solid #02b8dd;
-	color: #02b8dd;
-	padding: 6px 20px;
-	border-radius: 3px;
-}
-
-.more-link:hover {
-	background-color: #02b8dd;
-	color: #fff;
-}
-
-#cta {
-	padding: 60px 0;
-	text-align: center;
-}
-
-#cta h3 {
-	display: block;
-	margin: 0 auto 20px auto;
-	width: 400px;
-	border-bottom: 1px solid #02b8dd;
-	padding: 0 0 20px 0;
-}
-
-.button-2 {
-	font-family: 'Crete Round', serif;
-	display: block;
-	margin: 0 auto;
-	border: 2px solid #02b8dd;
-	color: #02b8dd;
-	border-radius: 3px;
-	width: 180px;
-	height: 50px;
-	font-size: 20px;
-	line-height: 50px;
-}
-
-.button-2:hover {
-	background-color: #02b8dd;
-	color: #fff;
-}
-
-footer {
-	padding: 60px 0;
-	background-color: #f8fafa;
-}
-
-#footer-info {
-	width: 380px;
-	float: right;
-	margin-top: 10px;
-}
-
-#footer-links {
-	width: 520px;
-	float: right;
-}
-
-#footer-links ul {
+#loginButton
+{
+	height: 40px;
 	width: 150px;
-	float: left;
-	margin-left: 20px;
+	background-image: url('../assets/zagraj.svg');
+	background-size: 100% 100%;
 }
 
-#footer-links ul li {
-	margin: 10px 0;
+#loginButton:hover
+{
+	background-image: url('../assets/zagraj_hover.svg');
 }
 
+#mainOnion {
+  background: no-repeat center;
+  background-size: 100% 100%;
+  background-image: url('../assets/onion_glow.svg');
+  width: 100%;
+  height: 100%;
+  left: 5px;
+  top: 5px;
+  margin-left: 0px;
+  margin-top: -40px;
+  position: absolute;
+  z-index: 10;
+}
+
+#radialStripes1 {
+  top: 25px;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: no-repeat center;
+  background-size: 100% 100%;
+  background-image: url('../assets/radial_stripes.svg');
+  z-index: 1;
+
+  -webkit-animation-name: spin1;
+  -webkit-animation-duration: 40000ms;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+  -moz-animation-name: spin1;
+  -moz-animation-duration: 40000ms;
+  -moz-animation-iteration-count: infinite;
+  -moz-animation-timing-function: linear;
+  -ms-animation-name: spin1;
+  -ms-animation-duration: 40000ms;
+  -ms-animation-iteration-count: infinite;
+  -ms-animation-timing-function: linear;
+
+  animation-name: spin1;
+  animation-duration: 40000ms;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
+#radialStripes2 {
+  top: 25px;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: no-repeat center;
+  background-size: 100% 100%;
+  background-image: url('../assets/radial_stripes.svg');
+  z-index: 2;
+  opacity: 0.5;
+
+  -webkit-animation-name: spin2;
+  -webkit-animation-duration: 40000ms;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+  -moz-animation-name: spin2;
+  -moz-animation-duration: 40000ms;
+  -moz-animation-iteration-count: infinite;
+  -moz-animation-timing-function: linear;
+  -ms-animation-name: spin2;
+  -ms-animation-duration: 40000ms;
+  -ms-animation-iteration-count: infinite;
+  -ms-animation-timing-function: linear;
+
+  animation-name: spin2;
+  animation-duration: 40000ms;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
+@-moz-keyframes spin1 {
+  from {
+    -moz-transform: rotate(0deg);
+  }
+  to {
+    -moz-transform: rotate(360deg);
+  }
+}
+
+@-webkit-keyframes spin1 {
+  from {
+    -webkit-transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+@keyframes spin1 {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@-moz-keyframes spin2 {
+  from {
+    -moz-transform: rotate(0deg);
+  }
+  to {
+    -moz-transform: rotate(-360deg);
+  }
+}
+
+@-webkit-keyframes spin2 {
+  from {
+    -webkit-transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(-360deg);
+  }
+}
+
+@keyframes spin2 {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(-360deg);
+  }
+}
