--- a/src/app/structure/structure.component.css
+++ b/src/app/structure/structure.component.css
@@ -3,7 +3,7 @@
 	position: relative;
 	background-color: fdf5e0;
 	height: 95px;
-	width: 450px;
+	width: 550px;
 	color: #9a6d38;
 	padding-top: 15px;
 	font-family: lovemonster;
@@ -89,34 +89,45 @@
 {
 	position: absolute;
 	left: 105px;
-	top: 25px;
-	font-size: 20px;
-	font-weight: bold;
+	top: 30px;
+	font-size: 23px;
+	//font-weight: bold;
 }
 
 #numOfStructures
 {
 	position: absolute;
 	right: 30px;
-	top: 25px;
+	top: 15px;
 	font-size: 45px;
 }
 
 #price
 {
 	position: absolute;
-	left: 105px;
-	top: 70px;
-	font-size: 20px;	
+	left: 125px;
+	top: 52px;
+	font-size: 23px;	
+}
+
+#priceIcon
+{
+	position: absolute;
+	width: 11px;
+	height: 18px;
+	left: 110px;
+	top: 57px;
+	background-image: url("../../assets/onion_overlay.svg");
+	background-size: contain;
+	background-repeat: no-repeat;
 }
 
 #production
 {
 	position: absolute;
-	left: 105px;
-	top: 45px;
+	right: 20px;
+	top: 60px;
 	font-size: 20px;
-	font-style: italic;
 }
 
 #str_icon
