--- a/src/landing_page/css/style.css
+++ b/src/landing_page/css/style.css
@@ -64,8 +64,9 @@ body {
 	position: absolute;
 	bottom: 28px;
 	right: 90px;
+	background: no-repeat center;
 	background-image: url('../assets/ok.svg');
-	background-size: 100% 100%;
+	background-size: contain;
 	z-index: 9999999;
 	cursor: pointer;
 }
@@ -201,8 +202,9 @@ body {
 	bottom: 20px;
 	height: 140px;
 	width: 250px;
+	background: no-repeat center;
 	background-image: url('../assets/logo.svg');
-	background-size: 100% 100%;
+	background-size: contain;
 	z-index: 20;
 }
 
@@ -218,8 +220,9 @@ body {
 {
 	height: 40px;
 	width: 150px;
+	background: no-repeat center;
 	background-image: url('../assets/zagraj.svg');
-	background-size: 100% 100%;
+	background-size: contain;
 }
 
 #loginButton:hover
@@ -229,7 +232,7 @@ body {
 
 #mainOnion {
   background: no-repeat center;
-  background-size: 100% 100%;
+  background-size: contain;
   background-image: url('../assets/onion_glow.svg');
   width: 100%;
   height: 100%;
