--- a/src/app/statistics/statistics.component.css
+++ b/src/app/statistics/statistics.component.css
@@ -247,3 +247,16 @@
 	top: 390px;
 	right: 30px;
 }
+
+#containerLabel
+{
+	position: absolute;
+	top: -17px;
+	left: 0px;
+	width: 100%;
+	height: 31px;
+	background: no-repeat center;
+	background-image: url("../../assets/statystyki.svg");
+	background-size: contain;
+	z-index: 100;
+}
