--- a/src/app/statistics/statistics.component.css
+++ b/src/app/statistics/statistics.component.css
@@ -40,7 +40,7 @@
 {
 	position: absolute;
 	width: 585px;
-	background-image: url("../../assets/nav_background.svg");
+	background-image: url("../../assets/horizontal.png");
 	background-size: contain;
 	z-index: 10;
 	margin-top: -2px;
@@ -54,7 +54,7 @@
 	position: absolute;
 	width: 15px;
 	height: 570px;
-	background-image: url("../../assets/nav_background_vertical.svg");
+	background-image: url("../../assets/vertical.png");
 	background-size: contain;
 	margin-left: -2px;
 	margin-right: -2px;
