--- a/src/app/upgrade/upgrade.component.css
+++ b/src/app/upgrade/upgrade.component.css
@@ -84,7 +84,7 @@
 {
 	width: 15px;
 	height: 100%;
-	background-image: url("../../assets/nav_background_vertical.svg");
+	background-image: url("../../assets/vertical.png");
 	background-size: contain;
 	position: absolute;
 	top: 0px;
@@ -96,7 +96,7 @@
 {
 	width: 15px;
 	height: 100%;
-	background-image: url("../../assets/nav_background_vertical.svg");
+	background-image: url("../../assets/vertical.png");
 	background-size: contain;
 	position: absolute;
 	top: 0px;
@@ -107,7 +107,7 @@
 .woodenRow
 {
 	position: absolute;
-	background-image: url("../../assets/nav_background.svg");
+	background-image: url("../../assets/horizontal.png");
 	background-size: contain;
 	width: 100%;
 	height: 15px;
