--- a/src/styles.css
+++ b/src/styles.css
@@ -22,7 +22,7 @@ body {
 }
 
 #grassContainer {
-  background: url("assets/grass.svg") repeat-x left bottom;
+  background: url("assets/grass.png") repeat-x left bottom;
   width: 100%;
   height: 170px;
   position: fixed;
@@ -172,10 +172,10 @@ body {
   margin-left: 13px;
   font-family: "Semringah";
   background-image: url("assets/trunk.svg"), url("assets/trunk.svg"),
-  url("assets/nav_background.svg"), url("assets/nav_background.svg"), url("assets/nav_background.svg"), url("assets/nav_background.svg"),
+  url("assets/horizontal.png"), url("assets/horizontal.png"), url("assets/horizontal.png"), url("assets/horizontal.png"),
   url("assets/trunk.svg"), url("assets/trunk.svg"),
-  url("assets/nav_background.svg"), url("assets/nav_background.svg"),
-  url("assets/nav_background.svg");
+  url("assets/horizontal.png"), url("assets/horizontal.png"),
+  url("assets/horizontal.png");
   background-position: 0% 0%, 0% 100%,
   2% 0%, 19% 0%, 35% 0%, 51% 0%,
   100% 0%, 100% 100%,
@@ -196,11 +196,11 @@ body {
 .panel-default .panel-body {
   position: relative;
   background-image: url("assets/trunk.svg"), url("assets/trunk.svg"),
-  url("assets/nav_background.svg"), url("assets/nav_background.svg"), url("assets/nav_background.svg"),
-  url("assets/nav_background.svg"), url("assets/nav_background.svg"), url("assets/nav_background.svg"),
-  url("assets/nav_background.svg"), url("assets/nav_background.svg"), url("assets/nav_background.svg"),
-  url("assets/nav_background.svg"), url("assets/nav_background.svg"), url("assets/nav_background.svg"),
-  url("assets/nav_background.svg"), url("assets/nav_background.svg"), url("assets/nav_background.svg");
+  url("assets/horizontal.png"), url("assets/horizontal.png"), url("assets/horizontal.png"),
+  url("assets/horizontal.png"), url("assets/horizontal.png"), url("assets/horizontal.png"),
+  url("assets/horizontal.png"), url("assets/horizontal.png"), url("assets/horizontal.png"),
+  url("assets/horizontal.png"), url("assets/horizontal.png"), url("assets/horizontal.png"),
+  url("assets/horizontal.png"), url("assets/horizontal.png"), url("assets/horizontal.png");
   background-position: 2.3% 100%, 100% 100%,
   0% 100%, 8% 100%, 16% 100%,
   24% 100%, 32% 100%, 40% 100%,
