--- a/src/app/structure/structure.component.css
+++ b/src/app/structure/structure.component.css
@@ -1,3 +1,8 @@
+.center {
+  width: 100%;
+  text-align: center;
+}
+
 .structureMain
 {
 	position: relative;
@@ -28,12 +33,9 @@
 .structureContainer
 {
 	position: relative;
-	margin-bottom: -13px;
+	margin-bottom: -35px;
 	margin-top: -15px;
 	top: -17px;
-	//height: 350px;
-	//overflow-y: scroll;
-	//overflow-x: hidden;
 }
 
 @font-face {
