--- a/src/styles.css
+++ b/src/styles.css
@@ -112,11 +112,12 @@ body {
 #onionContainer {
   padding: 20px;
   height: 570px;
+  width: 500px;
 }
-
 
 #uppContainer {
   padding: 20px;
+  width: 670px;
 }
 
 #loginContainer {
@@ -151,7 +152,7 @@ body {
   border: none;
   box-shadow: none;
   width: 350px;
-  margin-left: -100px;
+  margin-left: -80px;
 }
 
 .panel-title {
@@ -169,7 +170,7 @@ body {
 .panel > .panel-heading {
   position: relative;
   color: #7a3827;
-  margin-left: 13px;
+  margin-left: 12px;
   font-family: "Semringah";
   background-image: url("assets/trunk.svg"), url("assets/trunk.svg"),
   url("assets/nav_background.svg"), url("assets/nav_background.svg"), url("assets/nav_background.svg"), url("assets/nav_background.svg"),
@@ -195,6 +196,14 @@ body {
 
 .panel-default .panel-body {
   position: relative;
+  width: 568px;
+  z-index: 20;
+  border-style: none;
+}
+
+.panel-default .panel-footer {
+  position: relative;
+  background-color: transparent;
   background-image: url("assets/trunk.svg"), url("assets/trunk.svg"),
   url("assets/nav_background.svg"), url("assets/nav_background.svg"), url("assets/nav_background.svg"),
   url("assets/nav_background.svg"), url("assets/nav_background.svg"), url("assets/nav_background.svg"),
@@ -213,9 +222,7 @@ body {
   80px 19px, 80px 19px, 80px 19px,
   80px 19px, 80px 19px, 80px 19px, 80px 19px, 80px 19px;
   background-repeat: no-repeat;
-  width: 568px;
-  z-index: 20;
-  border-style: none;
+  z-index: 30;
 }
 
 .panel > .panel-collapse {
@@ -233,10 +240,6 @@ body {
   border: none;
   box-shadow: none;
   border-color: none;
-}
-
-.col-sm-2 {
-  margin-top: 50px;
 }
 
 #ads img {
